    (J.Andreina via vinayakumarb)

    HADOOP-12089. StorageException complaining " no lease ID" when updating
    FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)

    HADOOP-12154. FileSystem#getUsed() returns the file length only from root '/'
    (J.Andreina via vinayakumarb)

    HADOOP-10798. globStatus() should always return a sorted list of files
    (cmccabe)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12103. Small refactoring of DelegationTokenAuthenticationFilter to
    allow code sharing. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11973. Ensure ZkDelegationTokenSecretManager namespace znodes get
    created with ACLs. (Gregory Chanan via asuresh)

    HADOOP-11934. Use of JavaKeyStoreProvider in LdapGroupsMapping causes
    infinite loop. (Larry McCay via cnauroth)

    HADOOP-12058. Fix dead links to DistCp and Hadoop Archives pages.
    (Kazuho Fujii via aajisaka)

    HADOOP-12078. The default retry policy does not handle RetriableException
    correctly. (Arpit Agarwal)
